--- a/sobre/index.html
+++ b/sobre/index.html
@@ -12,7 +12,8 @@
 
 
 
-<p>Uma caixa de fósforos é um objeto simples, mas não pobre.</p>
+<div class="conteudo">
+  <p>Uma caixa de fósforos é um objeto simples, mas não pobre.</p>
 <p>Ela tem estrutura, forma e finalidade.
 Há a madeira que sustenta,
 o invólucro que protege,
@@ -36,6 +37,7 @@ A tradição não é ornamento, mas estrutura.</p>
 <p>Nada foi feito para brilhar sozinho.
 Tudo foi feito para servir ao momento certo de ser riscado.</p>
 
+</div>
 
   </main>
 </body>
