adiciona botao home

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -9,6 +9,11 @@
 <body>
   <main>
     
+
+<p class="nav">
+  <a href="/">←Voltare</a>
+</p>
+
 <h1>Sobre</h1>
 
 
@@ -39,6 +44,7 @@ A tradição não é ornamento, mas estrutura.</p>
 Tudo foi feito para servir ao momento certo de ser riscado.</p>
 
 </div>
+
 
   </main>
 </body>
